Fix recalculation function and fix media queries

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "init:gitignore": "curl https://raw.githubusercontent.com/github/gitignore/master/Node.gitignore -o .gitignore",
     "test": "npm-run-all test:*",
     "test:html": "globstar nu-html-checker *.html",
-    "test:js": "./node_modules/.bin/eslint js/script.js",
+    "test:js": "eslint js/",
     "build": "npm-run-all build:* test",
     "build:sass": " node-sass --output-style compact -o css sass",
     "build:autoprefixer": "autoprefixer-cli css/style.css",
@@ -26,8 +26,7 @@
   "devDependencies": {
     "autoprefixer-cli": "^1.0.0",
     "browser-sync": "^2.26.7",
-    "eslint": "^6.3.0",
-    "eslint-plugin-react": "^7.14.3",
+    "eslint": "^6.4.0",
     "globstar": "^1.0.0",
     "mkdirp": "^0.5.1",
     "node-sass": "^4.12.0",
